tests/MathML/basic/bad/badMoment1.mml


<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mspace width="2em"></mspace> 
  <apply>
    <moment></moment> 
    <degree>
      <cn>3</cn> 
    </degree> 
    <momentabout>
      <cn>0</cn> 
    </momentabout> 
    <momentabout>
      <cn>4</cn> 
    </momentabout> 
    <ci>X</ci> 
  </apply> 
  <mspace width="2em"></mspace> 
  <apply>
    <moment></moment> 
    <degree>
      <cn>3</cn> 
    </degree> 
    <foo>x</foo> 
    <momentabout>
      <cn>0</cn> 
    </momentabout> 
    <ci>X</ci> 
  </apply> 
</math>